# MangoHud

./: .gitignore  build.sh  meson.build
.github/workflows/: build-source.yml
src/: cpu.h  meson.build  overlay.cpp  overlay.h  vulkan.cpp
src/gui/: client_template.glade  gui.css  gui.desktop  gui.glade  gui.py
src/gui/protos/: mangohud_pb2.py
src/server/: build.sh  client_demo.cpp  common.c  common.h  mangohud.options  mangohud.pb.c  mangohud.pb.h  mangohud.proto  meson.build  protoc-gen-nanopb  server.cpp
subprojects/: nanopb.wrap
